More styles for the footer. Adjustment for breakpoints on header/footer.

--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -10,7 +10,7 @@ $offMenuWidth: 100vw;
 // Menu trigger to open/close off-canvas
 .menu-button-container {
 	position: absolute;
-	top: 10px;
+	top: 20px;
 	right: calc(-100% + 10px);
 
 	@include breakpoint(large) {
@@ -22,25 +22,28 @@ $offMenuWidth: 100vw;
 	padding: 0;
 	width: 45px;
 	height: 45px;
-	font-size: rem-calc(11px);
+	color: var(--brand-green);
+	font-size: rem-calc(13px);
 	text-transform: uppercase;
 	letter-spacing: 0.01em;
 	border: 0;
 	cursor: pointer;
-	background-color: var(--grey-30);
-	border-radius: 3px;
+	background-color: transparent;
+	// outline: 1px dashed red;
 
-	&:hover,
-	&:focus {
-		background-color: var(--grey-50);
-	}
+	// &:hover,
+	// &:focus {
+	// 	background-color: var(--grey-50);
+	// }
 
 	.svg--bars {
 		max-width: 18px;
+		fill: var(--brand-green);
 	}
 
 	.svg--xmark {
 		max-width: 16px;
+		fill: var(--brand-green);
 	}
 
 	&[aria-expanded="false"] {
@@ -162,6 +165,7 @@ $offMenuWidth: 100vw;
 
 	.menu-item-has-children {
 		position: relative;
+		padding-right: 3px;
 
 		.sub-menu-toggle[aria-expanded="false"] {
 			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%2343B143' d='M4.251 181.1C7.392 177.7 11.69 175.1 16 175.1c3.891 0 7.781 1.406 10.86 4.25l197.1 181.1l197.1-181.1c6.5-6 16.64-5.625 22.61 .9062c6 6.5 5.594 16.59-.8906 22.59l-208 192c-6.156 5.688-15.56 5.688-21.72 0l-208-192C-1.343 197.7-1.749 187.6 4.251 181.1z'/%3E%3C/svg%3E");
