--- a/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
@@ -83,24 +83,24 @@ a {
 }
 
 .entry-content {
-	> h1,
-	> .h1,
-	> h2,
-	> .h2,
-	> h3,
-	> .h3,
-	> h4,
-	> .h4,
-	> h5,
-	> .h5,
-	> h6,
-	> .h6 {
-		color: var(--brand-mid-blue);
-	}
+	// > h1,
+	// > .h1,
+	// > h2,
+	// > .h2,
+	// > h3,
+	// > .h3,
+	// > h4,
+	// > .h4,
+	// > h5,
+	// > .h5,
+	// > h6,
+	// > .h6 {
+	// 	color: var(--brand-mid-blue);
+	// }
 
 	p,
 	li {
-		a:not(.btn):not(.link-bar-a):not(.circle-cta__a):not([role="tab"]):not(.share-link):not(.connect-item):not(.tax-link) {
+		a:not(.btn) {
 			@extend %a-styled;
 		}
 	}
@@ -110,33 +110,33 @@ a {
 		padding-bottom: $large-spacing;
 	}
 
-	ul:not(.wwd--list):not(.wp-block-post-template) {
-		list-style: none;
-		margin: 1em 0;
-		padding: 0 0 0 $xxlarge-spacing !important;
+	// ul:not(.wwd--list):not(.wp-block-post-template) {
+	// 	list-style: none;
+	// 	margin: 1em 0;
+	// 	padding: 0 0 0 $xxlarge-spacing !important;
 
-		li {
-			&::before {
-				content: "";
-				position: absolute;
-				left: -29px;
-				top: 5px;
-				display: block;
-				width: 15px;
-				height: 15px;
-				background-color: var(--brand-light-blue);
-				border-radius: 50%;
-			}
-		}
-	}
+	// 	li {
+	// 		&::before {
+	// 			content: "";
+	// 			position: absolute;
+	// 			left: -29px;
+	// 			top: 5px;
+	// 			display: block;
+	// 			width: 15px;
+	// 			height: 15px;
+	// 			background-color: var(--brand-light-blue);
+	// 			border-radius: 50%;
+	// 		}
+	// 	}
+	// }
 
-	ol {
-		li {
-			&::marker {
-				font-weight: $semi-bold;
-				font-size: rem-calc(24);
-				color: var(--brand-light-blue);
-			}
-		}
-	}
+	// ol {
+	// 	li {
+	// 		&::marker {
+	// 			font-weight: $semi-bold;
+	// 			font-size: rem-calc(24);
+	// 			color: var(--brand-light-blue);
+	// 		}
+	// 	}
+	// }
 }
