--- a/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
@@ -47,14 +47,14 @@
 			margin-bottom: 0;
 			padding: $small-spacing;
 			color: white;
-			font-weight: $semi-bold;
+			// font-weight: $semi-bold;
 			font-size: rem-calc(16px);
 			text-transform: uppercase;
 			letter-spacing: 0.01em;
 
 			@include breakpoint(large) {
 				position: relative;
-				top: -1px;
+				top: -2px;
 				display: inline-block;
 				padding-left: $large-spacing;
 			}
