Partial added/updated

--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -13,7 +13,7 @@
 // @import "global/flex-classes";
 
 // Components
-// @import "components/block-connect";
+@import "components/navigation";
 // @import "components/breadcrumbs";
 // @import "components/circle-ctas";
 // @import "components/hero";
