--- a/wp-content/themes/decimaltenths/src/scss/critical.scss
+++ b/wp-content/themes/decimaltenths/src/scss/critical.scss
@@ -15,7 +15,7 @@
 @import "global/typography";
 
 // Components
-@import "components/navigation";
+@import "components/off-canvas";
 
 // Modules
 @import "modules/header";
