--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -118,6 +118,9 @@
 				flex-flow: row wrap;
 				min-width: 300px;
 				width: max-content;
+
+				max-height: 100vh;
+				overflow: scroll;
 				
 				box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 				transition: all 0.5s ease;
@@ -142,11 +145,21 @@
 		}
 
 		> .sub-menu {
+			position: relative;
+			top: 0;
 			font-weight: $regular;
+
+			@include breakpoint(large) {
+				display: block !important;
+			}
 			
 			.menu-item {
 				text-align: left;
 			}
+		}
+
+		.sub-menu-toggle {
+			display: none;
 		}
 	}
 }
