--- a/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
@@ -6,8 +6,10 @@ $global-width: 1340px;
 
 // Font family
 $brand-font: "Titillium Web";
-
 $heading-font: "proxima-nova";
+
+// Colors
+$brand-green-dark: darken(#43B143, 10%);
 
 // Font weights
 $regular: 400;
