--- a/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
@@ -44,38 +44,44 @@ h6,
 h1,
 .h1 {
 	@extend %h1;
+	margin-bottom: 1rem;
 }
 
 h2,
 .h2 {
 	@extend %h2;
+	margin-bottom: 1.1rem;
 }
 
 h3,
 .h3 {
 	@extend %h3;
+	margin-bottom: 1.2rem;
 }
 
 h4,
 .h4 {
 	@extend %h4;
+	margin-bottom: 1.3rem;
 }
 
 h5,
 .h5 {
 	@extend %h5;
+	margin-bottom: 1.4rem;
 }
 
 h6,
 .h6 {
 	@extend %h6;
+	margin-bottom: 1.5rem;
 }
 
 p,
 .p {
 	@extend %p;
-	margin-bottom: rem-calc(24);
-	line-height: 1.7;
+	margin-bottom: 1.6rem;
+	line-height: 1.6;
 }
 
 a {
