--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -15,6 +15,8 @@
 // Components
 @import "components/navigation";
 @import "components/buttons";
+@import "components/forms";
+@import "components/search-by-car-form";
 
 // Modules
 @import "modules/hero-intro";
