--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -80,6 +80,7 @@
 		width: 40px;
 		height: 40px;
 		background-color: transparent;
+		background-repeat: no-repeat;
 		border: 0;
 		cursor: pointer;
 	}
