Moved small heading styles to shared-helpers. Enqueued admin styles

--- a/wp-content/themes/decimaltenths/src/scss/blueocto-admin-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/blueocto-admin-styles.scss
@@ -7,10 +7,10 @@
 // @import "foundation/util/util";
 
 // Reusable
-// @import "global/variables";
+@import "global/variables";
 // @import "global/root-vars";
 // @import "global/extends";
-// @import "global/shared-helpers";
+@import "global/shared-helpers";
 
 // @import "./gutenberg/style.scss";
 
