--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -6,7 +6,7 @@
 // Global
 @import "global/variables";
 @import "global/extends";
-// @import "global/shared-helpers";
+@import "global/shared-helpers";
 
 // Grid
 @import "global/flex-grid";
