--- a/wp-content/themes/decimaltenths/src/scss/g-berg.scss
+++ b/wp-content/themes/decimaltenths/src/scss/g-berg.scss
@@ -1,9 +1,9 @@
 @charset 'utf-8';
 
 // Foundation Utils
-// @import "foundation/util/util";
+@import "foundation/util/util";
 
-// @import "global/variables";
-// @import "global/extends";
+@import "global/variables";
+@import "global/extends";
 
-// @import "gutenberg/style";
+@import "gutenberg/style";
