--- a/wp-content/themes/decimaltenths/src/scss/gutenberg/04-elements/blockquote.scss
+++ b/wp-content/themes/decimaltenths/src/scss/gutenberg/04-elements/blockquote.scss
@@ -7,7 +7,6 @@ blockquote {
 	> * {
 		margin-top: var(--global--spacing-unit);
 		margin-bottom: var(--global--spacing-unit);
-		color: white;
 
 		&:first-child {
 			margin-top: 0;
@@ -79,11 +78,12 @@ blockquote {
 	&:before {
 		content: "\201C";
 		position: absolute;
-		top: 13px;
-		left: 53px;
-		font-size: 88px;
+		top: -33px;
+		left: 50%;
+		transform: translateX(-50%);
+		font-size: rem-calc(200);
 		line-height: 1;
-		color: var(--brand-dark-blue);
+		color: var(--brand-green);
 	}
 
 	.wp-block-quote__citation,
