--- a/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
@@ -50,7 +50,7 @@
 	margin-left: auto;
 	display: flex;
 	flex-flow: row wrap;
-	// outline: 1px dashed red;
+	outline: 1px dashed red;
 }
 
 %row {
@@ -59,7 +59,7 @@
 	margin-left: auto;
 	display: flex;
 	flex-flow: row wrap;
-	// outline: 1px dashed red;
+	outline: 1px dashed red;
 }
 
 // to use when inside breakpoint
@@ -68,7 +68,7 @@
 	padding-right: $small-spacing;
 	padding-left: $small-spacing;
 	min-width: 0;
-	// outline: 1px dashed cyan;
+	outline: 1px dashed cyan;
 
 	@include breakpoint(large) {
 		padding-right: $medium-spacing;
@@ -81,7 +81,7 @@
 	padding-right: $small-spacing;
 	padding-left: $small-spacing;
 	min-width: 0;
-	// outline: 1px dashed cyan;
+	outline: 1px dashed cyan;
 
 	@include breakpoint(large) {
 		padding-right: $medium-spacing;
