--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -46,19 +46,31 @@ ul.products,
 			max-width: 100%;
 			text-align: center;
 
-			@media screen and (min-width: 644px) {
+			@include breakpoint(medium) {
 				// medium-6
 				flex: 0 0 50%;
 				max-width: 50%;
 			}
+		}
+	}
 
-			@media screen and (min-width: 966px) {
+	&.columns-3 {
+
+		> .product {
+
+			@include breakpoint(large) {
 				// large-4
 				flex: 0 0 33.33333%;
 				max-width: 33.33333%;
 			}
+		}
+	}
 
-			@media screen and (min-width: 1288px) {
+	&.columns-4 {
+
+		> .product {
+
+			@include breakpoint(large) {
 				// xlarge-3
 				flex: 0 0 25%;
 				max-width: 25%;
