Styles for the "Woo Gallery" on single product

--- a/wp-content/themes/decimaltenths/src/scss/product.scss
+++ b/wp-content/themes/decimaltenths/src/scss/product.scss
@@ -12,6 +12,7 @@
 // @import "components/alerts";
 @import "components/breadcrumbs";
 @import "components/related-products";
+@import "components/woo-gallery";
 @import "components/woo-grid";
 
 // Modules
