--- a/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
@@ -82,11 +82,12 @@
 			grid-template-areas: "product-gallery . product-description";
 		}
 
-		@media screen and (min-width: 1370px) {
+		// $global-width: 1340px;
+		@media screen and (min-width: $global-width) {
 			grid-template-columns:
-				minmax($small-spacing, 664px)
+				minmax($small-spacing, 768px)
 				1fr
-				minmax($small-spacing, 606px);
+				minmax($small-spacing, 60ch);
 		}
 
 		.woocommerce-product-gallery {
