Tweaked styles for the button and alerts

--- a/wp-content/themes/decimaltenths/src/scss/product.scss
+++ b/wp-content/themes/decimaltenths/src/scss/product.scss
@@ -9,7 +9,7 @@
 @import "global/extends";
 
 // Components
-// @import "components/alerts";
+@import "components/alerts";
 @import "components/breadcrumbs";
 @import "components/related-products";
 @import "components/woo-gallery";
