--- a/wp-content/themes/decimaltenths/src/scss/category.scss
+++ b/wp-content/themes/decimaltenths/src/scss/category.scss
@@ -9,7 +9,7 @@
 @import "global/extends";
 
 // Components
-// @import "components/alerts";
+@import "components/alerts";
 @import "components/breadcrumbs";
 @import "components/woo-grid";
 
