--- a/wp-content/themes/decimaltenths/src/scss/components/_alerts.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_alerts.scss
@@ -46,6 +46,16 @@ $alert-types: (
 	}
 
 	.button {
+		padding: 5px 7px;
+		background-color: darken($alert-success, 5%);
+		border: 1px solid darken($alert-success, 20%);
+		border-radius: 3px;
+
+		&:hover,
+		&:focus {
+			background-color: darken($alert-success, 10%);
+		}
+		
 		@include breakpoint(small only) {
 			display: block;
 			margin-bottom: $small-spacing;
