--- a/wp-content/plugins/formidable/css/frm_admin.css
+++ b/wp-content/plugins/formidable/css/frm_admin.css
@@ -92,9 +92,9 @@ a, .widget .widget-top, .stuffbox h3, .frm-collapsed {
 	display: none;
 }
 
-.frm-white-body #screen-meta-links .screen-meta-toggle {
+.frm-full-screen #screen-meta-links .screen-meta-toggle {
 	position: absolute;
-	right: 160px;
+	right: 80px;
 	box-shadow: none;
 	border-bottom-left-radius: var(--small-radius);
 	border-bottom-right-radius: var(--small-radius);
@@ -235,15 +235,14 @@ td.column-title .frm_actions_dropdown {
 }
 
 .frm-upgrade-bar {
-	text-align: center;
 	background: var(--sidebar-color);
 	border-bottom: 1px solid var(--sidebar-hover);
-	padding: 3px 0;
+	padding: 3px 0 3px 60px;
 	font-size: 95%;
 }
 
 .frm-upgrade-bar span {
-	opacity: .5;
+	opacity: .9;
 }
 
 a h1 .frmsvg {
@@ -348,7 +347,10 @@ ul.frm_form_nav > li:last-of-type {
 .frm_form_nav > li > a {
 	font-size: 13px;
 	text-transform: uppercase;
-	opacity: .8;
+}
+
+.frm_form_nav > li > a:not(.frm_noallow) {
+	opacity: 0.8;
 }
 
 .frm_form_nav > li > a:hover {
@@ -487,6 +489,10 @@ ul.frm_form_nav > li:last-of-type {
 
 .frm-empty-row {
 	display: none;
+}
+
+.frm-child-row {
+	box-shadow: 5px 0px 0px 0px inset var(--sidebar-hover);
 }
 
 .frm_animate_bg {
@@ -1614,6 +1620,19 @@ div.frm_updated_message {
 	margin-bottom:4px;
 }
 
+.frm-banner-alert {
+	text-align: left;
+	margin: 0;
+	border-radius: 0;
+	padding: 10px 0 10px 50px;
+}
+
+.frm-banner-alert a {
+	color: var(--primary-color);
+	font-weight: 400;
+	text-decoration: none;
+}
+
 .frm_updated_message ul,
 .frm_updated_message li,
 .frm_warning_style ul,
@@ -1819,7 +1838,7 @@ h2.frm-h2 + .howto {
 	font-size: 13px;
 }
 
-#frm_save_and_reload_settings, #frm_save_and_reload_settings + .frm-button-secondary {
+#frm_save_and_reload, #frm_save_and_reload + .frm-button-secondary {
 	visibility: visible;
 }
 
@@ -3689,6 +3708,10 @@ label input[type="checkbox"], label input[type="radio"] {
 
 .frm-alt-table tr:nth-child(even) {
 	background-color: var(--sidebar-color);
+}
+
+.frm-alt-table h3 {
+	margin-bottom: 0;
 }
 
 .form-field .frm_cb_button {
@@ -7216,6 +7239,57 @@ li.frm_noallow.button.frm_show_upgrade {
 
 .frm_noallow a {
 	color: inherit;
+}
+
+#frm_upgrade_modal_image {
+	max-width: 200px;
+}
+
+.frm-tab-message {
+	max-width: 600px;
+	margin: 20px auto;
+	color: rgba(63, 75, 91, 0.8);
+}
+
+.frm-settings-screenshot-toolbar {
+	min-height: 39px;
+	display: flex;
+}
+
+.frm-settings-screenshot-toolbar .frm-minmax-icon {
+	height: 8px;
+	width: 8px;
+	border-radius: 50%;
+	align-self: center;
+	margin-left: 10px;
+}
+
+.frm-settings-screenshot-toolbar .frm-minmax-icon:first-of-type {
+	margin-left: 20px;
+}
+
+.frm-settings-screenshot-toolbar img {
+	object-fit: contain;
+	align-self: flex-end;
+	margin-left: 25px;
+}
+
+.frm-settings-screenshot-toolbar + div {
+	background: #fff;
+	padding-top: 25px;
+	border-radius: 0 0 16px 16px;
+}
+
+.frm-settings-screenshot-toolbar + div img {
+	max-width: calc( 100% - 40px );
+}
+
+.frm-settings-screenshot-wrapper {
+	max-width: 700px;
+	margin: 50px auto 0;
+	box-shadow: 0px 4px 4px rgba(189, 196, 205, 0.25), 0px 12px 56px rgba(42, 57, 75, 0.25);
+	border-radius: 16px;
+	background: #EBECF1;
 }
 
 .frm-dialog {
