--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -70,6 +70,37 @@
 }
 
 .woocommerce-pagination {
-    margin-bottom: rem-calc(50);
-    // background-color: #B2DFDB;
+    padding: rem-calc(50px 0);
+
+    // UL
+    ul.page-numbers {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+
+        li {
+            display: inline;
+            padding-bottom: 0;
+
+            span, a {
+                display: inline-block;
+                width: rem-calc(60);
+                height: rem-calc(60);
+                line-height: rem-calc(60);
+                border: 1px solid var(--grey-30);
+
+                &:hover,
+                &:focus {
+                    background-color: var(--grey-30);
+                }
+
+                &.current {
+                    color: white;
+                    background-color: var(--brand-green);
+                    border-color: var(--brand-green);
+                }
+            }
+        }
+    }
 }
