--- a/wp-content/themes/decimaltenths/src/scss/blueocto-admin-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/blueocto-admin-styles.scss
@@ -4,93 +4,93 @@
 // ==================================================
 
 // Foundation Utils - For Breakpoints and REM calc
-// @import "foundation/util/util";
+@import "foundation/util/util";
 
 // Reusable
 @import "global/variables";
-// @import "global/root-vars";
-// @import "global/extends";
+@import "global/root-vars";
+@import "global/extends";
 @import "global/shared-helpers";
 
 // @import "./gutenberg/style.scss";
 
-// code {
-// 	color: inherit !important; // fixes issue in Editor turning text grey
-// }
+code {
+	color: inherit !important; // fixes issue in Editor turning text grey
+}
 
-// html :where(.editor-styles-wrapper) {
-// 	padding: $small-spacing;
-// 	font-family: $brand-font, -apple-system, BlinkMacSystemFont, "Segoe UI",
-// 		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-// 		"Helvetica Neue", sans-serif;
+html :where(.editor-styles-wrapper) {
+	padding: $small-spacing;
+	font-family: $brand-font, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
 
-	// .wp-block {
-	// 	max-width: var(--responsive--aligndefault-width);
-	// }
-// }
+	.wp-block {
+		max-width: var(--responsive--aligndefault-width);
+	}
+}
 
-// html :where(.editor-styles-wrapper) {
-// 	// Headings
-// 	h1,
-// 	.h1,
-// 	h2,
-// 	.h2,
-// 	h3,
-// 	.h3,
-// 	h4,
-// 	.h4,
-// 	h5,
-// 	.h5,
-// 	h6,
-// 	.h6 {
-// 		margin-top: 0;
-// 		margin-bottom: var(--global--spacing-vertical);
-// 		font-style: normal;
-// 		font-weight: $semi-bold;
-// 		line-height: 1.2;
-// 		color: var(--brand-mid-blue);
-// 		text-rendering: optimizeLegibility;
+html :where(.editor-styles-wrapper) {
+	// Headings
+	h1,
+	.h1,
+	h2,
+	.h2,
+	h3,
+	.h3,
+	h4,
+	.h4,
+	h5,
+	.h5,
+	h6,
+	.h6 {
+		margin-top: 0;
+		margin-bottom: var(--global--spacing-vertical);
+		font-style: normal;
+		font-weight: $semi-bold;
+		line-height: 1.2;
+		color: var(--brand-mid-blue);
+		text-rendering: optimizeLegibility;
 
-// 		small {
-// 			line-height: 0;
-// 			color: inherit;
-// 		}
-// 	}
-// 	h1,
-// 	.h1 {
-// 		@extend %h1;
-// 	}
+		small {
+			line-height: 0;
+			color: inherit;
+		}
+	}
+	h1,
+	.h1 {
+		@extend %h1;
+	}
 
-// 	h2,
-// 	.h2 {
-// 		@extend %h2;
-// 	}
+	h2,
+	.h2 {
+		@extend %h2;
+	}
 
-// 	h3,
-// 	.h3 {
-// 		@extend %h3;
-// 	}
+	h3,
+	.h3 {
+		@extend %h3;
+	}
 
-// 	h4,
-// 	.h4 {
-// 		@extend %h4;
-// 	}
+	h4,
+	.h4 {
+		@extend %h4;
+	}
 
-// 	h5,
-// 	.h5 {
-// 		@extend %h5;
-// 	}
+	h5,
+	.h5 {
+		@extend %h5;
+	}
 
-// 	h6,
-// 	.h6 {
-// 		@extend %h6;
-// 	}
+	h6,
+	.h6 {
+		@extend %h6;
+	}
 
-// 	p,
-// 	.p {
-// 		@extend %p;
-// 	}
-// }
+	p,
+	.p {
+		@extend %p;
+	}
+}
 
 // Custom helper 'tabs' for blocks in Editor
 // ==================================================
@@ -109,38 +109,38 @@
 	}
 }
 
-// .edit-post-visual-editor__post-title-wrapper {
-// 	position: relative;
-// 	background-color: rgba(#097eb0, 0.1); //blueocto blue
+.edit-post-visual-editor__post-title-wrapper {
+	position: relative;
+	background-color: rgba(#097eb0, 0.1); //blueocto blue
 
-// 	&::after {
-// 		position: absolute;
-// 		top: 0;
-// 		right: 0;
-// 		content: "page title";
-// 		padding: 5px;
-// 		color: white;
-// 		background-color: #097eb0;
-// 	}
-// }
+	&::after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		content: "page title";
+		padding: 5px;
+		color: white;
+		background-color: #097eb0;
+	}
+}
 
-// .acf-block-component {
-// 	position: relative;
-// 	width: 100%;
-// 	max-width: 1348px;
-// 	padding: 10px;
-// 	background-color: rgba(#097eb0, 0.1); //blueocto blue
+.acf-block-component {
+	position: relative;
+	width: 100%;
+	max-width: 1348px;
+	padding: 10px;
+	background-color: rgba(#097eb0, 0.1); //blueocto blue
 
-// 	&::after {
-// 		position: absolute;
-// 		top: 0;
-// 		right: 0;
-// 		content: "custom block";
-// 		padding: 5px;
-// 		color: white;
-// 		background-color: #097eb0;
-// 	}
-// }
+	&::after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		content: "custom block";
+		padding: 5px;
+		color: white;
+		background-color: #097eb0;
+	}
+}
 
 // Update the display width of custom blocks
 // [data-type="acf/bo-circlectas-block"],
