--- a/wp-content/themes/decimaltenths/src/scss/modules/_footer.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_footer.scss
@@ -3,7 +3,7 @@
 // ==============================================
 
 .footer {
-	margin-top: 100px;
+	// margin-top: 100px;
 	padding: rem-calc(60px) $medium-spacing;
 	color: white;
 	text-align: center;
