Stripping out the old design and styles. Adding new font

--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -14,11 +14,12 @@
 
 // Components
 @import "components/navigation";
-@import "components/buttons";
-@import "components/forms";
-@import "components/search-by-car-form";
+// @import "components/buttons";
+// @import "components/forms";
+
+// @import "components/search-by-car-form";
 
 // Modules
-@import "modules/hero-intro";
-@import "modules/footer";
+
+// @import "modules/footer";
 
