--- a/wp-content/themes/decimaltenths/src/scss/global/_shared-helpers.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_shared-helpers.scss
@@ -26,17 +26,17 @@
 	justify-content: space-between;
 }
 
-.small-h {
-	display: block;
-	margin-bottom: 11px;
-	color: var(--brand-green);
-	font-style: normal;
-	font-weight: $semi-bold;
-	font-size: rem-calc(14);
-	font-family: $brand-font;
-	text-transform: uppercase;
-	letter-spacing: 0.13em;
-}
+// .small-h {
+// 	display: block;
+// 	margin-bottom: 11px;
+// 	color: var(--brand-green);
+// 	font-style: normal;
+// 	font-weight: $semi-bold;
+// 	font-size: rem-calc(14);
+// 	font-family: $brand-font;
+// 	text-transform: uppercase;
+// 	letter-spacing: 0.13em;
+// }
 
 // .text-align-left {
 // 	text-align: left;
