--- a/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
@@ -3,70 +3,8 @@
 // ==============================================
 
 .search-by-car-form {
-    padding: $large-spacing $small-spacing $xxlarge-spacing;
-    text-align: center;
-    background-color: black;
 
-    @include breakpoint(large) {
-        padding-top: $xxlarge-spacing;
-        padding-bottom: $xxlarge-spacing;
-    }
+    .sbcf--text {}
 
-    .sbcf--text {
-        position: relative;
-        display: inline-block;
-        margin-bottom: $large-spacing;
-        padding: rem-calc(10px 25px);
-        color: white;
-        letter-spacing: 0.06em;
-
-        @include breakpoint(large) {
-            margin-bottom: 0;
-        }
-
-        &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            display: block;
-            width: rem-calc(16);
-            height: 100%;
-            background-color: var(--brand-green);
-            clip-path: polygon(72% 0%, 100% 0%, 28% 100%, 0% 100%);
-        }
-    }
-
-    .sbcf--form {
-        width: 100%;
-
-        @include breakpoint(large) {
-            display: inline-block;
-            width: 70%;
-        }
-
-        select {
-            display: block;
-            padding: rem-calc(0 50px 0 30px);
-            width: 100%;
-            border: 1px solid var(--brand-green);
-            clip-path: polygon(3% 0%, 100% 0%, 97% 100%, 0% 100%);
-
-            @include breakpoint(medium down) {
-                margin-bottom: $large-spacing;
-            }
-
-            @include breakpoint(large) {
-                display: inline-block;
-                margin-right: rem-calc(20);
-                width: 37%;
-            }
-        }
-
-        @include breakpoint(large) {
-            [type="submit"] {
-                display: inline-block;
-            }
-        }
-    }
+    .sbcf--form {}
 }
