--- a/wp-content/themes/decimaltenths/src/scss/global/_fonts.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_fonts.scss
@@ -1,37 +1,30 @@
 // Absolute URLs needed as loaded inline header.php
-// readex-pro-regular - latin
+
+/* source-code-pro-200 - latin */
 @font-face {
-	font-family: "Readex Pro";
+	font-family: 'Source Code Pro';
+	font-style: normal;
+	font-weight: 200;
+	src: local(''),
+		 url('../fonts/source-code-pro-v22-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+		 url('../fonts/source-code-pro-v22-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* source-code-pro-regular - latin */
+  @font-face {
+	font-family: 'Source Code Pro';
 	font-style: normal;
 	font-weight: 400;
-	font-display: swap;
-	src: local(""),
-		url("/wp-content/themes/blueocto-2022/dist/fonts/readex-pro-v8-latin-regular.woff2")
-			format("woff2"),
-		url("/wp-content/themes/blueocto-2022/dist/fonts/readex-pro-v8-latin-regular.woff")
-			format("woff");
-}
-// readex-pro-500 - latin
-@font-face {
-	font-family: "Readex Pro";
+	src: local(''),
+		 url('../fonts/source-code-pro-v22-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+		 url('../fonts/source-code-pro-v22-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* source-code-pro-500 - latin */
+  @font-face {
+	font-family: 'Source Code Pro';
 	font-style: normal;
 	font-weight: 500;
-	font-display: swap;
-	src: local(""),
-		url("/wp-content/themes/blueocto-2022/dist/fonts/readex-pro-v8-latin-500.woff2")
-			format("woff2"),
-		url("/wp-content/themes/blueocto-2022/dist/fonts/readex-pro-v8-latin-500.woff")
-			format("woff");
-}
-// readex-pro-600 - latin
-@font-face {
-	font-family: "Readex Pro";
-	font-style: normal;
-	font-weight: 600;
-	font-display: swap;
-	src: local(""),
-		url("/wp-content/themes/blueocto-2022/dist/fonts/readex-pro-v8-latin-600.woff2")
-			format("woff2"),
-		url("/wp-content/themes/blueocto-2022/dist/fonts/readex-pro-v8-latin-600.woff")
-			format("woff");
-}
+	src: local(''),
+		 url('../fonts/source-code-pro-v22-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+		 url('../fonts/source-code-pro-v22-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  
