--- a/wp-content/themes/decimaltenths/src/scss/global/_fonts.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_fonts.scss
@@ -2,29 +2,38 @@
 
 /* source-code-pro-200 - latin */
 @font-face {
-	font-family: 'Source Code Pro';
-	font-style: normal;
-	font-weight: 200;
-	src: local(''),
-		 url('../fonts/source-code-pro-v22-latin-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		 url('../fonts/source-code-pro-v22-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* source-code-pro-regular - latin */
-  @font-face {
-	font-family: 'Source Code Pro';
+font-family: 'Source Code Pro';
+font-style: normal;
+font-weight: 200;
+src: local(''),
+		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-200.woff2') format('woff2'),
+		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-200.woff') format('woff');
+}
+/* source-code-pro-regular - latin */
+@font-face {
+font-family: 'Source Code Pro';
+font-style: normal;
+font-weight: 400;
+src: local(''),
+		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-regular.woff2') format('woff2'),
+		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-regular.woff') format('woff');
+}
+/* source-code-pro-500 - latin */
+@font-face {
+font-family: 'Source Code Pro';
+font-style: normal;
+font-weight: 500;
+src: local(''),
+		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-500.woff2') format('woff2'),
+		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-500.woff') format('woff');
+}
+
+/* michroma-regular - latin */
+@font-face {
+	font-family: 'Michroma';
 	font-style: normal;
 	font-weight: 400;
 	src: local(''),
-		 url('../fonts/source-code-pro-v22-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		 url('../fonts/source-code-pro-v22-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* source-code-pro-500 - latin */
-  @font-face {
-	font-family: 'Source Code Pro';
-	font-style: normal;
-	font-weight: 500;
-	src: local(''),
-		 url('../fonts/source-code-pro-v22-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-		 url('../fonts/source-code-pro-v22-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  
+		 url('/wp-content/themes/decimaltenths/dist/fonts/michroma-v16-latin-regular.woff2') format('woff2'),
+		 url('/wp-content/themes/decimaltenths/dist/fonts/michroma-v16-latin-regular.woff') format('woff');
+}
