Reworking the Footer to match the new design.

--- a/wp-content/themes/decimaltenths/src/scss/critical.scss
+++ b/wp-content/themes/decimaltenths/src/scss/critical.scss
@@ -11,7 +11,7 @@
 
 // Global
 @import "global/helpers";
-// @import "global/fonts";
+@import "global/fonts";
 @import "global/typography";
 
 // Components
