--- a/wp-content/themes/decimaltenths/src/scss/global/_flex-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_flex-grid.scss
@@ -1123,10 +1123,10 @@
 	// 	}
 }
 
-// .shrink {
-// 	flex: 0 0 auto;
-// 	max-width: 100%;
-// }
+.shrink {
+	flex: 0 0 auto;
+	max-width: 100%;
+}
 
 // .column-block {
 // 	margin-bottom: 1.25rem;
