--- a/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
@@ -2,11 +2,11 @@
 // Variables
 // ==============================================
 
-$global-width: 1366px;
+$global-width: 1490px;
 
 // Font family
 $brand-font: "Source Code Pro";
-$heading-font: "Helvetica";
+$heading-font: "Michroma";
 
 // Colors
 $brand-green-dark: darken(#43B143, 10%);
