--- a/wp-content/themes/decimaltenths/src/scss/global/_root-vars.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_root-vars.scss
@@ -7,6 +7,7 @@
 	--grid-width: 1340px;
 
 	// Brand Colours
+	--brand-neon-green: #50e887;
 	--brand-green: #43B143;
 	--brand-l-grey: #F2F2F2;
 	--brand-d-grey: #282828;
