--- a/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_typography.scss
@@ -24,11 +24,11 @@ h6,
 .h6 {
 	margin-top: 0;
 	// margin-bottom: var(--global--spacing-vertical);
-	font-style: italic;
-	font-weight: $xtra-bold;
+	font-weight: $bold;
 	font-family: $heading-font;
 	line-height: 1.2;
 	color: inherit;
+	text-transform: uppercase;
 	text-rendering: optimizeLegibility;
 
 	small {
