--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -13,16 +13,9 @@
 
 	.menu-item {
 		display: block;
-		padding: $small-spacing;
-		color: white;
 		font-size: rem-calc(16px);
 		text-transform: uppercase;
 		letter-spacing: 0.01em;
-
-		@include breakpoint(large) {
-			display: inline-block;
-			padding: 0;
-		}
 
 		&:last-of-type {
 			margin-right: 0;
@@ -34,8 +27,7 @@
 
 			&:hover,
 			&:focus {
-				color: var(--brand-green);
-				border-bottom: 1px solid var(--brand-green);
+				border-bottom-color: inherit;
 			}
 		}
 	}
@@ -44,9 +36,21 @@
 .primary--menu {
 
 	> .menu-item {
+		padding: $small-spacing;
 
 		@include breakpoint(large) {
+			display: inline-block;
+			padding: 0;
 			padding-right: $large-spacing;
+		}
+
+		a {
+			color: white;
+
+			&:hover,
+			&:focus {
+				border-bottom-color: var(--brand-neon-green);
+			}
 		}
 	}
 
