Styles for the new hero

--- a/wp-content/themes/decimaltenths/src/scss/app.scss
+++ b/wp-content/themes/decimaltenths/src/scss/app.scss
@@ -14,10 +14,11 @@
 
 // Components
 @import "components/navigation";
-// @import "components/buttons";
-// @import "components/forms";
+@import "components/buttons";
+@import "components/forms";
 
-// @import "components/search-by-car-form";
+@import "components/hero-car-filters";
+@import "components/search-by-car-form";
 
 // Modules
 
