--- a/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
@@ -185,22 +185,22 @@
 
 %btn {
     display: inline-block;
-    // padding: 13px 45px;
-    // color: white;
-    // font-style: italic;
-    // font-weight: $semi-bold;
-    // font-size: rem-calc(14);
-    // font-family: $brand-font;
-    // text-transform: uppercase;
-    // letter-spacing: 0.09em;
-    // background-color: var(--brand-green);
-    // clip-path: polygon(7% 0%, 100% 0%, 93% 100%, 0% 100%);
-	// cursor: pointer;
+	padding: 10px 50px;
+	height: 50px;
+	color: var(--brand-neon-green);
+	font-family: $heading-font;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	background-color: transparent;
+	border: 2px solid var(--brand-neon-green);
+	border-radius: 50px;
+	cursor: pointer;
 
-    // &:hover, &:focus {
-    //     color: white;
-    //     background-color: $brand-green-dark;
-    // }
+	&:hover,
+	&:focus {
+		color: black;
+		background-color: var(--brand-neon-green);
+	}
 }
 
 // Alerts and Errors
