Responsive styles without guides

--- a/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
@@ -3,21 +3,23 @@
 // ==============================================
 
 .search-by-car-form {
-    outline: 1px dashed cyan;
 
-    .sbcf--form {}
+    // .sbcf--form {}
 
     .form-row {
 
         &:last-of-type {
-            padding-top: 15px;
+            padding-top: $medium-spacing;
         }
     }
 
     select {
-        width: 60%;
         background-color: white;
         border: 0;
+
+        @include breakpoint(large) {
+            width: 60%;
+        }
     }
 
     [type="submit"] {
