--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -7,41 +7,56 @@ hero-car-filters {
     display: block;
     background: black url('../img/green-car-bg.jpg') right center; 
     background-size: cover;
-    outline: 1px dashed #f0f;
 
     &::before {
         content: '';
         position: absolute;
         top: 0;
         left: 0;
-        width: 50%;
+        width: 100%;
         height: 100%;
         background: rgb(0,0,0); 
         background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+
+        @include breakpoint(large) {
+            width: 50%;
+        }
     }
 
     hero-inner {
         @extend %row;
         position: relative;
-        padding-top: 119px;
-        padding-bottom: 50px;
-        padding-left: 52px;
         z-index: 5;
+        padding-top: rem-calc(119px);
+
+        @include breakpoint(medium down) {
+            height: 95vh;
+        }
+
+        @include breakpoint(large) {
+            padding-left: rem-calc(52px);
+            padding-bottom: rem-calc(50px);
+        }
     }
 
     hero-content {        
         @extend %column;
-        max-width: 40%;
         color: white;
 
-        outline: 1px dashed blue;
+        @include breakpoint(large) {
+            max-width: 40%;
+        }
     }
 
     .hero--heading {
-        margin-bottom: 10px;
-        font-size: rem-calc(69);
+        margin-bottom: $small-spacing;
+        font-size: calc(69px * #{$medium-calc});
         line-height: 1.2;
         letter-spacing: 0.05em;
+
+        @include breakpoint(large) {
+            font-size: rem-calc(69);
+        }
     }
 
     .hero--subheading {
